--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,17 @@ Click==7.0
 Flask==1.1.1
 Flask-Cors==3.0.8
 Flask-Login==0.4.1
+Flask-SocketIO==4.2.1
 Flask-SQLAlchemy==2.4.1
 Flask-WTF==0.14.2
 itsdangerous==1.1.0
 Jinja2==2.10.3
 MarkupSafe==1.1.1
 numpy==1.17.3
+pkg-resources==0.0.0
 pycodestyle==2.5.0
+python-engineio==3.10.0
+python-socketio==4.3.1
 six==1.13.0
 SQLAlchemy==1.3.10
 Werkzeug==0.16.0
